--- a/.markdown-lint.yml
+++ b/.markdown-lint.yml
@@ -4,9 +4,8 @@
 MD004:
   style: dash
 
-# Disable line length for tables
-MD013:
-  tables: false
+# Disable line length checking (tables cause issues)
+MD013: false
 
 # Ordered list item prefix
 MD029:
